--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -12,7 +12,7 @@
 }
 
 .container-ticket {
-    margin-top: 60px;
+    margin-top: 40px;
     width: 550px;
     border-radius: 15px;
     height: 300px;
@@ -22,7 +22,12 @@
     align-items: center;
     flex-direction: column;
     box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.4);
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+}
+
+.type-name{
+    font-size: 2rem;
+    margin-top: 10px;
 }
 
 h1{
