--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -19,3 +19,27 @@
     cursor: pointer;
     margin-right: 10px;
 }
+
+@media (max-width: 575.98px) {
+    .container-btn .text-button{
+        font-size: 18px;
+    }
+    .container-btn{
+        margin: 10px 0;
+    }
+    .text-button{
+        width: 140px;
+    }
+    .container-btn:first-child{
+        margin-left: 0;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .container-btn .text-button{
+        font-size: 16px;
+    }
+    .text-button{
+        width: 120px;
+    }
+}
