--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -36,7 +36,6 @@ h1{
     color: #FFF;
     font-size: 36px;
     font-weight: 400;
-
 }
 
 span{
@@ -73,4 +72,54 @@ span{
 
 .footer a:hover{
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+@media (max-width: 575.98px) {
+    h1{
+        font-size: 1.4rem;
+    }
+    .ticket-num{
+        font-size: 2.3rem;
+    }
+    .container-ticket {
+        width: 336.72px;
+        height: 200px;
+    }
+    .container-button{
+        flex-direction: column;
+    }
+    .btn-atendente{
+        margin-top: 10px;
+    }
+    .type-name{
+        font-size: 1.3rem;
+    }
+    .footer{
+        font-size: 16px;
+    }
+    .footer a{
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    h1{
+        font-size: 1.8rem;
+    }
+    .ticket-num{
+        font-size: 3rem;
+    }
+    .container-ticket {
+        width: 458.4px;
+        height: 250px;
+    }
+    .type-name{
+        font-size: 1.5rem;
+    }
+    .footer{
+        font-size: 16px;
+    }
+    .footer a{
+        font-size: 20px;
+    }
 }
